--- a/map.html
+++ b/map.html
@@ -8,13 +8,9 @@
     <script src="map.js"></script>
 </head>
 <body style="background-color: black;">
-     <div id="map" style="width: 100%; height: 500px;">
+        <img style="z-index: 2; width: 2000px; height: 1000px; object-fit: cover; position: absolute; top: 0;" id="intro" src="https://wallpapercave.com/wp/wp1928401.jpg"></img>
+        <img style="z-index: 1; width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0;" id="map" src="https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg">
+    </div>
 
-     </div>
-    
-     <div id="Info">
-
-    
-     </div>
 </body>
 </html>
