--- a/map.html
+++ b/map.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="map.css">
     <script src="map.js"></script>
 </head>
-<body style="background-color: black;">
-        <img style="z-index: 2; width: 2000px; height: 1000px; object-fit: cover; position: absolute; top: 0;" id="intro" src="https://wallpapercave.com/wp/wp1928401.jpg"></img>
-        <img style="z-index: 1; width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0;" id="map" src="https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg">
+<body style="background-color: black; overflow: hidden; position: relative;">
+        <img style="z-index: 2; width: 1900px; height: 1000px; object-fit: cover; position: absolute; top: 0;" id="intro" src="https://wallpapercave.com/wp/wp1928401.jpg"></img>
+        <img style="z-index: 1; object-fit: cover; position: absolute; top: 0;" id="map" src="https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg">
     </div>
 
 </body>
