--- a/map.html
+++ b/map.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="map.css">
     <script src="map.js"></script>
 </head>
-<body style="background-color: black; overflow: hidden; position: relative;">
-        <img style="z-index: 2; width: 1900px; height: 1000px; object-fit: cover; position: absolute; top: 0;" id="intro" src="https://wallpapercave.com/wp/wp1928401.jpg"></img>
-        <img style="z-index: 1; object-fit: cover; position: absolute; top: 0;" id="map" src="https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg">
+<body style="background-color: black; overflow: hidden; position: relative; align-self: center s;">
+        <img style="z-index: 2; width: 1900px; height: 1000px; object-fit: cover; top: 0;" onclick="myFunction(this)" class="intro" src="https://wallpapercave.com/wp/wp1928401.jpg"></img>
     </div>
 
 </body>
-</html>
+</html> 
