--- a/map.html
+++ b/map.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="map.css">
     <script src="map.js"></script>
 </head>
-<body style="background-color: black; overflow: hidden; position: relative; align-self: center s;">
-        <img style="z-index: 2; width: 1900px; height: 1000px; object-fit: cover; top: 0;" onclick="myFunction(this)" class="intro" src="https://wallpapercave.com/wp/wp1928401.jpg"></img>
+<body style="background-color: black; overflow: hidden; align-self: center;">
+        <img id="map" style="position: relative;" src="https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg">
+    <div style="z-index: 2; scale: 10%; position: absolute; top: 0; left: 0;" class="buttons">
+        <img id="spidey" style="top: 20px; right: 10px; transform: translateY(4200px); transform: translateX(3000px);" src="https://static.wikia.nocookie.net/logopedia/images/d/db/Spider-Man_signal.svg/revision/latest/scale-to-width-down/200?cb=20220514211614">
     </div>
-
 </body>
-</html> 
+</html>
