--- a/map.html
+++ b/map.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="map.css">
     <script src="map.js"></script>
 </head>
-<body style="background-color: black; overflow: hidden; align-self: center;">
-        <img id="map" style="position: relative;" src="https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg">
-    <div style="z-index: 2; scale: 10%; position: absolute; top: 0; left: 0;" class="buttons">
-        <img id="spidey" style="top: 20px; right: 10px; transform: translateY(4200px); transform: translateX(3000px);" src="https://static.wikia.nocookie.net/logopedia/images/d/db/Spider-Man_signal.svg/revision/latest/scale-to-width-down/200?cb=20220514211614">
+<body style="background-color: black; background-size: cover; background-repeat: no-repeat; background-image: url(https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg)">
+    <div class="buttons">
+        <img id="spidey" style="scale: 10%; margin-top: 20.2%; margin-left: 23%;" src="https://static.wikia.nocookie.net/logopedia/images/d/db/Spider-Man_signal.svg/revision/latest/scale-to-width-down/200?cb=20220514211614">
+        <img id="widow" style="border-radius: 50%; height: 50px; border: 60%; overflow: hidden;" src="https://i.pinimg.com/564x/91/90/b9/9190b9e16e27994aef789f9332a32552.jpg">
     </div>
 </body>
 </html>
