Added a bunch of buttons :)

--- a/map.html
+++ b/map.html
@@ -8,9 +8,9 @@
     <script src="map.js"></script>
 </head>
 <body style="background-color: black; background-size: cover; background-repeat: no-repeat; background-image: url(https://wallpapers.com/images/hd/world-map-4k-blue-grid-by3azmaqazhlwypg.jpg)">
-    <div class="buttons">
-        <img id="spidey" style="scale: 10%; margin-top: 20.2%; margin-left: 23%;" src="https://static.wikia.nocookie.net/logopedia/images/d/db/Spider-Man_signal.svg/revision/latest/scale-to-width-down/200?cb=20220514211614">
-        <img id="widow" style="border-radius: 50%; height: 50px; border: 60%; overflow: hidden;" src="https://i.pinimg.com/564x/91/90/b9/9190b9e16e27994aef789f9332a32552.jpg">
-    </div>
+    <img id="spidey" style="scale: 10%; margin-top: 20.2%; margin-left: 23%; position: absolute;" src="https://static.wikia.nocookie.net/logopedia/images/d/db/Spider-Man_signal.svg/revision/latest/scale-to-width-down/200?cb=20220514211614">
+    <img id="widow" style="scale: 4%; border-radius: 50%; margin-top: 9%; margin-left: 43.5%; position: absolute;" src="https://i.pinimg.com/564x/91/90/b9/9190b9e16e27994aef789f9332a32552.jpg">
+    <img id="ironman" style="border-radius: 50%; scale: 6%; margin-left: 16%; margin-top: 14.5%; position: absolute;" src="https://cdn-acop.makeronline.com/asop/2024-11/15/jpg/thumbnail/173160715520679500-67363a73327d.jpg">
+    <img id="Cap"  src="https://s3-alpha.figma.com/hub/file/2730919713/2f508407-97eb-467e-bb2c-7e4a6f2dd261-cover.png">
 </body>
 </html>
